<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.sciome</groupId>
    <artifactId>bmdexpress2</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        		<!-- Logging -->
		<logback.version>1.0.13</logback.version>
		<slf4j.version>1.7.5</slf4j.version>

		<!-- Test --> 
		<junit.version>4.12</junit.version>
  
        <!-- EventBus Version -->
        <eventbus.version>18.0</eventbus.version>
        
        <!-- FontAwesome Version -->
        <fontawesome.version>8.9</fontawesome.version>
        
         <!-- Jcommon Version -->
        <jcommon.version>1.0.23</jcommon.version>
    </properties>
    
    
    	<repositories>
		 <repository>
		      <id>sciome</id>
		      <name>sciome</name>
		      <url>https://apps.sciome.com/maven</url>
	    </repository>
	</repositories>
    
    <dependencies>
    	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
	<dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-swing</artifactId>
	    <version>11.0.1</version>
	</dependency>
	
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
	<dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-web</artifactId>
	    <version>11.0.1</version>
	</dependency>
		
		
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11</version>
        </dependency>
        
        
        	<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<scope>runtime</scope>
		</dependency>
		

        <!-- EventBus -->
    	<dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${eventbus.version}</version>
        </dependency>
        
		<!-- Test Artifacts -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
		<dependency>
		    <groupId>org.jfree</groupId>
		    <artifactId>jfreechart</artifactId>
		    <version>1.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jfree/jcommon -->
		<dependency>
		    <groupId>org.jfree</groupId>
		    <artifactId>jcommon</artifactId>
		    <version>1.0.24</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart-fx -->
		<dependency>
		    <groupId>org.jfree</groupId>
		    <artifactId>jfreechart-fx</artifactId>
		    <version>1.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jfree/jfreesvg -->
		<dependency>
		    <groupId>org.jfree</groupId>
		    <artifactId>jfreesvg</artifactId>
		    <version>3.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx -->
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx</artifactId>
		    <version>${fontawesome.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.10.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		    <version>2.10.3</version>
		</dependency>
		
		<dependency>
	        <groupId>com.fasterxml.jackson.core</groupId>
	        <artifactId>jackson-databind</artifactId>
	        <version>2.12.7.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
		<dependency>
		    <groupId>commons-cli</groupId>
		    <artifactId>commons-cli</artifactId>
		    <version>1.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.5</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.6</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-math3</artifactId>
		    <version>3.6.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
		<dependency>
		    <groupId>org.controlsfx</groupId>
		    <artifactId>controlsfx</artifactId>
		    <version>11.0.1</version>
		</dependency>

		<!-- sciome commons math functions-->
         <dependency>
         	<groupId>sciome-commons</groupId>
  			<artifactId>math</artifactId>
 	 		<version>1.04.0134</version>
         </dependency>
         
         	<!-- https://mvnrepository.com/artifact/gov.nist.math/jama -->
		<dependency>
		    <groupId>gov.nist.math</groupId>
		    <artifactId>jama</artifactId>
		    <version>1.0.3</version>
		</dependency>
        
        
    </dependencies>
    
      <build>
    <plugins>
    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-maven-plugin -->
     <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.4</version>
        <configuration>
                                  <source>11</source>
                                <target>11</target>
                                <release>11</release>
                                <compilerArgs>

                                <arg>--add-modules</arg>
                                <arg> javafx.controls,javafx.fxml,javafx.graphics </arg>
                                        <arg>--add-exports</arg>
                                <arg>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls </arg>

                                        <arg>--add-exports</arg>
                                <arg>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls </arg>

                                <arg>--add-exports</arg>
                                <arg>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls </arg>

                                <arg>--add-exports</arg>
                                <arg>javafx.base/com.sun.javafx.event=org.controlsfx.controls </arg>
                                </compilerArgs>
                    <mainClass>com.sciome.bmdexpress2/com.sciome.bmdexpress2.BMDExpress2Main</mainClass>
        </configuration>
      </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
                <release>11</release>
            </configuration>
        </plugin >
      <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <configuration>
        <archive>
          <manifest>
            <mainClass>com.sciome.bmdexpress2.BMDExpress2Main</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
      </configuration>
    </plugin>
    </plugins>
  </build>
    
    
  
    
    
    
</project>
